<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="100dp"
                android:layout_marginBottom="10dp"
                android:padding="0dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:background="@drawable/attach_image"
                    android:scaleType="fitXY"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/imageThumbnail"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/categoryHint"
                android:layout_marginBottom="@dimen/editTextMarginBottom"
                android:layout_marginTop="@dimen/editTextMarginBottom"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:clickable="true"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:id="@+id/advertCategory"/>

            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/tiladvertTitle"
                app:hintTextAppearance="@style/textHint">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/advertTitleHint"
                    android:layout_marginBottom="@dimen/editTextMarginBottom"
                    android:id="@+id/advertTitle"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/tiladvertDiscription"
                app:hintTextAppearance="@style/textHint">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/itemDiscriptionHint"
                    android:layout_marginBottom="@dimen/editTextMarginBottom"
                    android:inputType="text|textMultiLine"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical"
                    android:id="@+id/advertDescription"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/tilamount"
                app:hintTextAppearance="@style/textHint">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/amount"
                android:layout_marginBottom="@dimen/editTextMarginBottom"
                android:id="@+id/amount"
                android:inputType="number"
                android:maxLength="4"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/tilownermobile"
                app:hintTextAppearance="@style/textHint">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/mobileNumberHint"
                android:inputType="number"
                android:maxLength="10"
                android:layout_marginBottom="@dimen/editTextMarginBottom"
                android:id="@+id/ownermobile"/>
            </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/approve"
                    android:text="@string/declarationSting"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_gravity="bottom"
                android:weightSum="3">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnText"
                    android:textColor="@color/white"
                    android:id="@+id/btnPost"
                    android:background="@drawable/button_drawable"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>